--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -26,10 +26,12 @@
         <li><a class="nav-link" href="/contact">Contact us</a></li>
         <li><a class="nav-link" href="/dashboard">MY Account</a></li>       
       </ul>
+      <a class="nav-link" href="/search"></a><img src="/images/img/searchicon/search.png" alt="Search"></a>
+
       <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
         <li>
-          <a href="wishlist.html">
-            <a href="wishlist.html"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
+          <a href="/wishlist">
+            <a href="/wishlist"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
           </a>
         </li>
         <li>
