--- a/public/css/viewOrder.css
+++ b/public/css/viewOrder.css
@@ -87,3 +87,8 @@
   background-color: #2ecc71;
   color: white;
 }
+.btn-details{
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
