week 10 order page error solved2

--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -67,6 +67,8 @@
               <div class="products">
                 <% order.products.forEach(product=> { %>
                   <div class="product-item">
+                    <img height="100px" width="100px" src="http://localhost:3001/<%= product.image %>" alt="Product Image" class="product-image">
+
                     <p>Name: <%= product.name %>
                     </p>
                     <p>Category: <%= product.category %>
