--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -48,50 +48,54 @@
         <div class="dash-box">
           <p style="color: #000000; font-weight: bold;">Order Details</p>
         </div>
-        
-        <div">
-        <% if (orders && orders.length> 0) { %>
-          <% orders.forEach(order=> { %>
-            <div class="order-item" style="border: 1px solid #000000; padding: 8px; margin-bottom: 4px; border-radius: 5px;">
-              <div class="order-details">
-                <h3>Order ID: <%= order.id %>
-                </h3>
-                <p>Placed on: <%= order.date %>
-                </p>
-                
-                      <p>Status: <span class="status-<%= order.statusClass %>">
-                          <%= order.status %>
-                        </span></p>
-              </div>
 
-              <div class="products">
-                <% order.products.forEach(product=> { %>
-                  <div class="product-item">
-                    <img height="100px" width="100px" src="http://localhost:3001/<%= product.image %>" alt="Product Image" class="product-image">
+        <div>
+          <% if (orders && orders.length> 0) { %>
+            <% orders.forEach(order=> { %>
+              <div class="order-item"
+                style="border: 1px solid #000000; padding: 8px; margin-bottom: 4px; border-radius: 5px;">
+                <div class="order-details">
+                  <p><strong>Order ID:</strong>
+                    <%= order.id %>
+                  </p>
+                  <p><strong>Placed on: </strong>
+                    <%= order.date %>
+                  </p>
 
-                    <p>Name: <%= product.name %>
-                    </p>
-                    <p>Category: <%= product.category %>
-                    </p>
-                    <p>Quantity: <%= product.quantity %>
-                    </p>
-                    <p>Price: $<%= product.price.toFixed(2) %>
-                    </p>
-                  </div>
-                  <% }) %>
-              </div>
+                  <p><strong>Status:</strong> <span class="status-<%= order.statusClass %>">
+                      <%= order.status %>
+                    </span></p>
+                </div>
 
-              <div class="order-actions d-flex justify-content-end">
-                <a href="/order/details/<%= order.id %>" class="btn btn-details">View Details</a>
+                <div class="products">
+                  <% order.products.forEach(product=> { %>
+                    <div class="product-item">
+                      <img height="100px" width="100px" src="http://localhost:3001/<%= product.image %>"
+                        alt="Product Image" class="product-image">
+
+                      <p><strong>Name:</strong> <%= product.name %>
+                      </p>
+                      <p><strong>Category:</strong> <%= product.category %>
+                      </p>
+                      <p><strong>Quantity:</strong> <%= product.quantity %>
+                      </p>
+                      <p><strong>Price:</strong> &#8377;<%= product.price.toFixed(2) %>
+                      </p>
+                    </div>
+                    <% }) %>
+                </div>
+
+                <div class="order-actions d-flex justify-content-end">
+                  <a href="/order/details/<%= order.id %>" class="btn btn-details">View Details</a>
+                </div>
               </div>
-            </div>
-            <% }); %>
-              <% } else { %>
-                <p>No orders found!</p>
-                <% } %>
+              <% }); %>
+                <% } else { %>
+                  <p>No orders found!</p>
+                  <% } %>
+        </div>
       </div>
     </div>
-  </div>
 
     <%- include("./layouts/footer.ejs") %>
 
