--- a/views/admin/ordermanagement.ejs
+++ b/views/admin/ordermanagement.ejs
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="nav-item menu-items">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/admin/couponmanagement">
             <span class="menu-title">Coupen Management</span>
           </a>
         </li>
