--- a/views/admin/updatecategory.ejs
+++ b/views/admin/updatecategory.ejs
@@ -89,7 +89,7 @@
             </a>
           </li>
           <li class="nav-item menu-items">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/admin/couponmanagement">
               <span class="menu-title">Coupen Management</span>
             </a>
           </li>
